syntax = "proto3";

option java_package = "dnd.generated";

import "monster/monster_create.proto";
import "shared/empty.proto";

message MonsterShortRpc{
  int64 id = 1;
  string name = 2;
  float cr = 3;
  string imageUrl = 4;
}

message MonsterShortListRpc{
  repeated MonsterShortRpc monsters = 1;
}


message RandomMonsterRequestRpc{
  float cr = 1;
  int32 amount = 2;
}


message GetMonstersRequestRpc{
  int32 amount = 1;
  int32 page = 2;
  MonsterFiltersRpc filters = 3;
}

message MonsterFiltersRpc{
  string name = 1;
  float cr = 2;
  int64 groupId = 3;
  string type = 4;
  string size = 5;
}

service MonsterService{

  rpc getRandomMonstersByCr(RandomMonsterRequestRpc) returns (MonsterShortListRpc);
  rpc getMonsters(GetMonstersRequestRpc) returns (MonsterShortListRpc);
  rpc createMonster(MonsterCreate) returns (Empty);
}